--- a/Proyecto (Festividades)/FestividadTableViewCell.xib
+++ b/Proyecto (Festividades)/FestividadTableViewCell.xib
@@ -9,70 +9,99 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="112" id="KGk-i7-Jjw" customClass="FestividadTableViewCell" customModule="Proyecto__Festividades_" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="112"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="125" id="KGk-i7-Jjw" customClass="FestividadTableViewCell" customModule="Proyecto__Festividades_" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="125"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="112"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="125"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4yU-uj-9O7">
-                        <rect key="frame" x="0.0" y="5" width="320" height="102"/>
+                        <rect key="frame" x="0.0" y="5" width="320" height="115"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="GjF-YL-Inx">
-                                <rect key="frame" x="10" y="5" width="300" height="92"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="e9N-ll-2Xy">
+                                <rect key="frame" x="10" y="5" width="300" height="105"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nombre" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="STi-Dr-UAh">
-                                        <rect key="frame" x="0.0" y="0.0" width="300" height="27.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="G4f-sZ-7tc">
-                                        <rect key="frame" x="0.0" y="32.5" width="300" height="27"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="pxu-Gm-76x">
+                                        <rect key="frame" x="0.0" y="0.0" width="270" height="105"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fecha:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V0L-Y0-7IR">
-                                                <rect key="frame" x="0.0" y="0.0" width="150" height="27"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0000 / 00 / 00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="28Y-7z-NGe">
-                                                <rect key="frame" x="150" y="0.0" width="150" height="27"/>
-                                                <accessibility key="accessibilityConfiguration" identifier="fecha"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="GjF-YL-Inx">
+                                                <rect key="frame" x="0.0" y="0.0" width="270" height="105"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nombre" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="STi-Dr-UAh">
+                                                        <rect key="frame" x="0.0" y="0.0" width="270" height="35"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="G4f-sZ-7tc">
+                                                        <rect key="frame" x="0.0" y="35" width="270" height="35"/>
+                                                        <subviews>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fecha:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V0L-Y0-7IR">
+                                                                <rect key="frame" x="0.0" y="0.0" width="135" height="35"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0000 / 00 / 00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="28Y-7z-NGe">
+                                                                <rect key="frame" x="135" y="0.0" width="135" height="35"/>
+                                                                <accessibility key="accessibilityConfiguration" identifier="fecha"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                        </subviews>
+                                                    </stackView>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Nqm-Qk-mIf">
+                                                        <rect key="frame" x="0.0" y="70" width="270" height="35"/>
+                                                        <subviews>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Día:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Og-Ak-IEw">
+                                                                <rect key="frame" x="0.0" y="0.0" width="135" height="35"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Miércoles" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8j0-i6-zqv">
+                                                                <rect key="frame" x="135" y="0.0" width="135" height="35"/>
+                                                                <accessibility key="accessibilityConfiguration" identifier="tipo"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                        </subviews>
+                                                    </stackView>
+                                                </subviews>
+                                                <constraints>
+                                                    <constraint firstAttribute="trailing" secondItem="STi-Dr-UAh" secondAttribute="trailing" id="5Tw-Ml-OeV"/>
+                                                    <constraint firstItem="STi-Dr-UAh" firstAttribute="leading" secondItem="GjF-YL-Inx" secondAttribute="leading" id="dQR-BD-X1l"/>
+                                                    <constraint firstItem="STi-Dr-UAh" firstAttribute="top" secondItem="GjF-YL-Inx" secondAttribute="top" id="i2N-pw-SxP"/>
+                                                </constraints>
+                                            </stackView>
                                         </subviews>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Nqm-Qk-mIf">
-                                        <rect key="frame" x="0.0" y="64.5" width="300" height="27.5"/>
-                                        <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tipo:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Og-Ak-IEw">
-                                                <rect key="frame" x="0.0" y="0.0" width="150" height="27.5"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Público / Privado" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8j0-i6-zqv">
-                                                <rect key="frame" x="150" y="0.0" width="150" height="27.5"/>
-                                                <accessibility key="accessibilityConfiguration" identifier="tipo"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                        </subviews>
-                                    </stackView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="suit.heart" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="W3D-qs-D5f">
+                                        <rect key="frame" x="275" y="1.5" width="25" height="102.5"/>
+                                        <color key="tintColor" red="0.65748816610000005" green="0.1638840419" blue="0.1638840419" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="25" id="4BH-fQ-lX2"/>
+                                        </constraints>
+                                    </imageView>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstItem="W3D-qs-D5f" firstAttribute="top" secondItem="e9N-ll-2Xy" secondAttribute="top" id="Cqr-HV-djD"/>
+                                    <constraint firstAttribute="trailing" secondItem="W3D-qs-D5f" secondAttribute="trailing" id="EGF-iU-nQ5"/>
+                                    <constraint firstAttribute="bottom" secondItem="pxu-Gm-76x" secondAttribute="bottom" id="SwY-uw-S2S"/>
+                                    <constraint firstAttribute="bottom" secondItem="W3D-qs-D5f" secondAttribute="bottom" id="Zdq-Y6-Ix0"/>
+                                    <constraint firstItem="pxu-Gm-76x" firstAttribute="top" secondItem="e9N-ll-2Xy" secondAttribute="top" id="uWy-0L-U6r"/>
+                                </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="GjF-YL-Inx" secondAttribute="bottom" constant="5" id="Kkn-c9-MKm"/>
-                            <constraint firstItem="GjF-YL-Inx" firstAttribute="top" secondItem="4yU-uj-9O7" secondAttribute="top" constant="5" id="STM-74-dGP"/>
-                            <constraint firstItem="GjF-YL-Inx" firstAttribute="leading" secondItem="4yU-uj-9O7" secondAttribute="leading" constant="10" id="Ssq-3l-Vzm"/>
-                            <constraint firstAttribute="trailing" secondItem="GjF-YL-Inx" secondAttribute="trailing" constant="10" id="VY6-6t-diu"/>
+                            <constraint firstItem="e9N-ll-2Xy" firstAttribute="top" secondItem="4yU-uj-9O7" secondAttribute="top" constant="5" id="PGw-R4-nS4"/>
+                            <constraint firstAttribute="trailing" secondItem="e9N-ll-2Xy" secondAttribute="trailing" constant="10" id="vfP-qQ-OdU"/>
+                            <constraint firstAttribute="bottom" secondItem="e9N-ll-2Xy" secondAttribute="bottom" constant="5" id="wGQ-9Q-O9E"/>
+                            <constraint firstItem="e9N-ll-2Xy" firstAttribute="leading" secondItem="4yU-uj-9O7" secondAttribute="leading" constant="10" id="wZX-wU-Ixf"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -85,12 +114,16 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="FavoritoView" destination="W3D-qs-D5f" id="515-tO-7Ta"/>
                 <outlet property="Fecha" destination="28Y-7z-NGe" id="1C2-re-cJT"/>
                 <outlet property="FestividadView" destination="4yU-uj-9O7" id="xxC-ES-hXi"/>
                 <outlet property="Nombre" destination="STi-Dr-UAh" id="T65-8A-Zrc"/>
                 <outlet property="Tipo" destination="8j0-i6-zqv" id="ZNB-vd-UXP"/>
             </connections>
-            <point key="canvasLocation" x="140.57971014492756" y="119.19642857142857"/>
+            <point key="canvasLocation" x="140.57971014492756" y="123.54910714285714"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="suit.heart" catalog="system" width="128" height="109"/>
+    </resources>
 </document>
